# scrap_engine

./: .gitignore  MANIFEST.in  README.md  a.out  frame_test.py  lil_t.py  lil_t_endless.py  pyproject.toml  reader.sh  scrap-engine.py  scrap_bench.py  scrap_engine.cpp  scrap_engine.html  scrap_engine.py  scrap_engine.py.1  scrap_engine_testing.py  scrap_test.py  scrape.py  setup.py
docs/: DOCS.md  index.html  scrap_engine.html  search.json
examples/: README.md
pics/: example1.kra  example1.kra~
rust/: Cargo.toml
rust/src/: main.rs
src/scrap_engine/: __init__.py  consts.py  error.py
src/scrap_engine/addable/: __init__.py  addable.py  object.py  object_group.py  state.py
src/scrap_engine/addable/misc/: __init__.py  box.py  circle.py  frame.py  line.py  square.py  text.py
src/scrap_engine/map/: __init__.py  map.py  submap.py
tests/: __init__.py  add_text_test.py  circle.py  circler.py  scrap_bench.py  scrap_engine_testing.py  stack_test.py
