[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "scrap_engine"
authors = [{ name = "lxgr", email = "lxgr@protonmail.com" }]
description = "A 2D ascii game engine for the terminal"
keywords = ["game", "Ascii"]
version = "1.4.2"
license = { text = "GPL-3.0-only" }
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/lxgr-linux/scrap_engine"
Issues = "https://github.com/lxgr-linux/scrap_engine/issue"
Repository = "https://github.com/lxgr-linux/scrap_engine.git"
